--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+@import "react-alice-carousel/lib/alice-carousel.css";
 
 
 *{
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+}
+.carousel {
+  display: flex;
+  flex-direction: column;
+}
+.carouselItem {
+  display: flex;
 }
