--- a/src/components/homepage/our_services/Services.css
+++ b/src/components/homepage/our_services/Services.css
@@ -20,21 +20,30 @@ color: rgb(1, 100, 80);
 }
 .icon__container{
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    padding: 5px  ;
-    margin-left: 10px;
-    border-radius: 10px;
-}
-.icon__container:hover{
-    border-bottom: 10px solid rgb(1, 100, 80);
-}
-.item__icon {
-    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    height: 40%;
-    border-radius: 50%;    
-    width: 40%;
-    padding-top: 18px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border-radius: 10px;
 }
 .icon__container p{
     padding-top: 28px;
 }
+.icon__container:hover{
+    border-bottom: 10px solid rgb(1, 100, 80);
+    color:rgb(1, 100, 80);
+}
+.item__icon {
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    height: 30%;
+    border-radius: 50%;    
+    width: 40%;
+    padding-top: 18px;
+    align-items: center;
+    color:  rgb(255,101,1);
+}
+.item__icon:active {
+    color: rgb(1, 100, 80);
+}
+
