--- a/src/components/homepage/our_services/Services.css
+++ b/src/components/homepage/our_services/Services.css
@@ -5,6 +5,7 @@ display: flex;
 flex-direction: column;
 margin: 40px auto;
 text-align: center;
+margin-bottom: 66px;
 }
 .services h4{
 color: rgb(1, 100, 80);
