--- a/src/components/homepage/house/House.css
+++ b/src/components/homepage/house/House.css
@@ -1,9 +1,12 @@
 .house {
     width: 80%;
     margin: 40px auto;
+    position: relative;
+    
 }
 .house-container{
-    display: flex
+    display: flex;
+    margin-bottom: 50px;
 }
 
 .house-container-image {
@@ -30,6 +33,7 @@
 .house-container-text p {
     font-weight: 400;
     margin-top: 20px;
+    margin-bottom: 69px;
     color: gray;
 }
 button {
@@ -41,5 +45,90 @@ button {
     border-radius: 5px;
     border: transparent !important;
     cursor: pointer;
-    margin-top: 40px;
 }
+.house-container-text2 {
+    width: 40%; 
+    margin-top: 50px;
+    margin-left: 30px; 
+}
+.house-container-text2 h5{
+    color:rgb(1, 100, 80);
+    font-weight: 400;
+}
+.house-container-text2 h1 {
+    font-weight: 700;
+    margin-top: 15px;
+}
+.house-container-text2 p {
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 69px;
+    color: gray;
+}
+.house-container-image2 {
+    width: 40%;
+    
+    
+}
+.house_pic2 {
+    width: 99%;
+    height: 100%;
+    margin-left: 90px;
+}
+.compare {
+    width: 80%; 
+    margin-left: auto;
+    margin-right: auto;
+    position: relative;
+}
+.compare-text {
+    width: 42%;
+    text-align: center;
+    margin: 20px auto;
+    font-weight: 700;
+    position: relative;
+}
+.compare-container {
+    width: 80%;
+    position: relative;
+    display: flex
+}
+.compare-container-img {
+    width: 800px;
+    height: 70%;
+}
+.compare-text-text {
+    position: absolute;
+    width: 40%;
+    height: 190px;
+    padding: 9px;
+    bottom: 30px;
+    right: -210px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: rgb(252, 243, 243);
+    padding: 5px;
+    text-align: center;
+    border-radius: 10px;
+}
+.compare-text-text p {
+    width: 80%;
+    text-align: center;
+}
+.compare-text-profile{
+    display: flex;
+}
+.compare-text-profile span {
+    width: 18px;
+    border-top: 2px solid rgb(255,101,1);
+    margin-top: 5px;
+    margin-left: 7px;
+}
+.compare-text-text::after {
+    width: 180px;
+    border-bottom: 19px solid rgb(255,101,1);
+}
+
