--- a/src/components/homepage/house/House.css
+++ b/src/components/homepage/house/House.css
@@ -109,7 +109,7 @@ button {
     align-items: center;
     justify-content: center;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-    background-color: rgb(252, 243, 243);
+    background-color: rgb(255,255,255);
     padding: 5px;
     text-align: center;
     border-radius: 10px;
