added delete story folder

--- a/src/components/homepage/house/House.css
+++ b/src/components/homepage/house/House.css
@@ -114,6 +114,9 @@ button {
     text-align: center;
     border-radius: 10px;
 }
+.compare-text-text_icon{
+    margin-right: 210px;
+}
 .compare-text-text p {
     width: 80%;
     text-align: center;
