--- a/src/components/homepage/testimony/Testimony.css
+++ b/src/components/homepage/testimony/Testimony.css
@@ -11,4 +11,52 @@
 }
 .testimony-text h5{
     color: rgb(1, 100, 80);
+    color: grey;
 }
+
+.alice-carousel__prev-btn {
+    background-color: rgb(255,101,1);
+    width: 38px;
+    height: 35px;
+    margin-left: 500px;
+    border-radius: 50%; 
+    text-align: center;  
+    margin-top: 10px;
+}
+
+.alice-carousel__next-btn{
+    background-color: rgb(255,101,1);
+    margin-left: 5px;
+    width: 38px;
+    height: 35px;
+    border-radius: 50%;
+    margin-top: 10px;
+  
+}
+.carouselItem2 {
+    width: 70%;
+    height: 190px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    background-color: rgb(255,255,255);
+    text-align: left;
+    border-radius: 10px;
+    padding: 17px;
+}
+.carouselItem2-profiles{
+    margin-top: 10px;
+    display: flex;
+    margin-left: 10px;
+}
+.carouselItem2-profiles p{
+    color : grey;
+}
+.carouselItem2-profiles h5{
+   margin-top: 4px; 
+}
+.carouselItem2-profiles h6{
+    color : grey;
+} 
