--- a/src/components/homepage/testimony/Testimony.css
+++ b/src/components/homepage/testimony/Testimony.css
@@ -11,7 +11,6 @@
 }
 .testimony-text h5{
     color: rgb(1, 100, 80);
-    color: grey;
 }
 
 .alice-carousel__prev-btn {
@@ -21,7 +20,7 @@
     margin-left: 500px;
     border-radius: 50%; 
     text-align: center;  
-    margin-top: 10px;
+    margin-top: 30px;
 }
 
 .alice-carousel__next-btn{
@@ -30,8 +29,7 @@
     width: 38px;
     height: 35px;
     border-radius: 50%;
-    margin-top: 10px;
-  
+    margin-top: 30px;  
 }
 .carouselItem2 {
     width: 70%;
@@ -49,14 +47,25 @@
 .carouselItem2-profiles{
     margin-top: 10px;
     display: flex;
-    margin-left: 10px;
+    margin-left: -75px;
 }
-.carouselItem2-profiles p{
-    color : grey;
+.carouselItem2 p{
+    color: grey;
+}
+
+.carouselItem2 span {
+    border-bottom:  6px solid rgb(1, 100, 80);
+    width: 120px;
+    margin-top: 30px;
+    margin-left: -134px;
+    padding: 0;
+}
+.carouselItem2-profiles-left {
+    margin-left: 9px;
 }
 .carouselItem2-profiles h5{
    margin-top: 4px; 
 }
 .carouselItem2-profiles h6{
-    color : grey;
+    color: grey;
 } 
