--- a/src/components/homepage/listed/Listed.css
+++ b/src/components/homepage/listed/Listed.css
@@ -37,3 +37,30 @@
     margin-left: 30%;
     margin-bottom: 40px;
 }
+@media screen and (max-width: 490px) {
+    .listed {
+        width: 100%;
+    }
+     .list-search-text {
+         position: absolute;
+         padding-top: 60px;
+        background-color: rgb(255,255,255);
+        border-radius: 10px;
+        width: 70%;  
+        left: 64px;
+        top: 40px;
+        margin: 0px;
+    }
+    .list-search-text h1  {
+        font-size: 20px;
+    }
+    .list-search{
+        width: 200px;
+        height: 10px;
+        margin-left: 10%;
+        margin-bottom: 40px;
+    }
+}
+@media screen and (max-width: 790px) {
+
+}
