--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -3,6 +3,7 @@
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
+    opacity: 0.9;
     width: 100%;
     height: 100vh;
 
@@ -18,7 +19,13 @@
     position: absolute;
     margin: auto;
     background-color:  #fff;
+    opacity: 0.9;
     border-radius: 10px;
+    top: 100px;
+    text-align: center;
+}
+.log-detail h1 {
+    margin-top: 15px;
 }
 .log-form  {
     display: flex;
@@ -32,5 +39,11 @@
     padding: 10px;
     margin-bottom:  20px;
     border-radius: 10px;
-    border: transparent !important;
+    border: 1px solid rgb(1, 100, 80)!important;
+}
+.log-form button {
+    margin-bottom:  20px;
+}
+p{
+    margin-bottom: 26px;
 }
