--- a/src/components/homepage/testimony/Testimony.css
+++ b/src/components/homepage/testimony/Testimony.css
@@ -15,7 +15,7 @@
 
 
 .carouselItem2 {
-    width: 70%;
+    width: 100%;
     height: 190px;
     display: flex;
     flex-direction: column;
@@ -78,5 +78,15 @@
     .testimony-text {
         width: 90%;
         text-align: center;
+    }
+    .carouselItem2 {
+        width: 100%;
+        height: 190px;
+        border-radius: 10px;
+        padding: 17px;
+    }
+    .carouselItem2-profiles{
+       
+        margin-left: -63px;
     }
 }
