--- a/src/components/homepage/testimony/Testimony.css
+++ b/src/components/homepage/testimony/Testimony.css
@@ -85,8 +85,9 @@
         border-radius: 10px;
         padding: 17px;
     }
-    .carouselItem2-profiles{
-       
-        margin-left: -63px;
+    .carouselItem2-profiles {
+        display: flex;
+        margin-top: 10px;
+        margin-left: -46px;
     }
 }
