--- a/src/components/homepage/HomePage.css
+++ b/src/components/homepage/HomePage.css
@@ -35,14 +35,16 @@
 .Search{
     position: absolute;
     bottom: -48px;
-    left: 43px;
-    width: 500px;
+    left: 0;
+    right: 0;
+    width: 50%;
     border: 1px solid rgb(223, 221, 221);
     height: 120px;
     background-color: rgb(223, 221, 221);
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     border-radius: 10px;
-    margin-left: 20%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .Search h4 {
@@ -117,10 +119,12 @@ img{
     font-size:  1rem; 
 }
 .Search{
+    width: 90%;
     bottom: -48px;
     left: 0;
-    width: 345px;
-    margin-left: 9px;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
    
 }
 .Search_input{
