--- a/src/components/homepage/testimony/Testimony.css
+++ b/src/components/homepage/testimony/Testimony.css
@@ -13,14 +13,12 @@
     color: rgb(1, 100, 80);
 }
 
-
 .carouselItem2 {
-    width: 100%;
-    height: 190px;
+    width: 86%;
+    height: 215px;
+    margin-left: 10px;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
     box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     background-color: rgb(255,255,255);
     text-align: left;
@@ -30,18 +28,17 @@
 .carouselItem2-profiles{
     margin-top: 10px;
     display: flex;
-    margin-left: -125px;
+    justify-content: flex-start;
+    
 }
 .carouselItem2 p{
     color: grey;
 }
 
 .carouselItem2 span {
-    border-bottom:  6px solid rgb(1, 100, 80);
     width: 120px;
     margin-top: 30px;
-    margin-left: -134px;
-    padding: 0;
+    padding: 10px;
 }
 .carouselItem2-profiles-left {
     margin-left: 9px;
@@ -69,6 +66,10 @@
     .carouselItem2 {
     width: 90%;
 }
+.carouselItem2-profiles {
+    display: flex;
+    margin-top: 10px;
+}
 
 }
 @media screen and (max-width: 790px) {
@@ -80,7 +81,8 @@
         text-align: center;
     }
     .carouselItem2 {
-        width: 100%;
+        width: 80%;
+        margin: 0 auto;
         height: 190px;
         border-radius: 10px;
         padding: 17px;
@@ -88,6 +90,5 @@
     .carouselItem2-profiles {
         display: flex;
         margin-top: 10px;
-        margin-left: -46px;
     }
 }
