--- a/src/components/homepage/HomePage.css
+++ b/src/components/homepage/HomePage.css
@@ -5,7 +5,7 @@
 }
 .hero{
     width: 100%;
-    background: gray;
+    background: hsl(189, 26%, 90%);
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -31,11 +31,13 @@
     font-size: 3rem;
     padding-top: 13px;
     color: rgb(10,10,10);
+    text-align: left;
 }
 
 .hero_text h4{
     font-size: 1.3rem;
-    color: rgb(10,10,10);  
+    color: rgb(10,10,10); 
+    text-align: left; 
 }
 
 .Search{
