--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,6 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Lato", "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+  sans-serif;
 }
