--- a/src/pages/Detail/DetailPage.css
+++ b/src/pages/Detail/DetailPage.css
@@ -1,6 +1,6 @@
 .DetailPage {
-    width: 80%;
-    margin: 10px auto;
+    width: 60%;
+    margin: 30px auto;
 }
 .DetailPage-Container {
     display: flex;
@@ -8,12 +8,29 @@
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0px 0px 10px #000;
-    width: 90%;
+    width: 100%;
     padding: 10px;
     margin-left: 10px;
     margin-bottom: 30px;
 }
 .DetailPage-Container  img {
-    width: 80%;
-    height: 340px;
+    width: 100%;
+    height: 360px;
+    object-position: center;;
+}
+.DetailPage-Container-text{
+    width: 60%;
+    margin: 5px auto;
+    
+}
+.DetailPage-Container-text h2 {
+    font-size: 14px;
+}
+.DetailPage-Container-text-name {
+    text-align: center;
+}
+.DetailPage-Container-text-card {
+    display: flex;
+    justify-content: space-between;
+    align-items: center
 }
