--- a/src/components/Apart-Detail/ApartDetail.css
+++ b/src/components/Apart-Detail/ApartDetail.css
@@ -49,7 +49,8 @@
 }
 .apartDetail-button {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
     padding-bottom: 5px;
 }
 @media screen and (max-width: 790px) {
